SUBDIRS=

noinst_LIBRARIES=libSpinOperator.a

libSpinOperator_a_SOURCES=PeriodicAnisotropicMagnetizationOperator.cc \
ChiralExchangeOperator.cc \
FermionParityOperator.cc \
PottsNonLocalOccupationNumberOperator.cc \
SpinS2Operator.cc \
SpinWith1DTranslationS2Operator.cc \
BondEnergySpinPseudospinOperator.cc \
SpinWith2DTranslationSpinSpinCorrelationOperator.cc \
SpinWithPseudospin2DTranslationSpinSpinCorrelationOperator.cc
