SUBDIRS=

noinst_LIBRARIES=libArchitectureOperation.a

libArchitectureOperation_a_SOURCES=AbstractArchitectureOperation.cc \
VectorHamiltonianMultiplyOperation.cc \
MultipleRealScalarProductOperation.cc \
AddRealLinearCombinationOperation.cc \
MultipleComplexScalarProductOperation.cc \
AddComplexLinearCombinationOperation.cc \
MatrixMatrixMultiplyOperation.cc \
AbstractPrecalculationOperation.cc \
QHEParticlePrecalculationOperation.cc \
NDMAPPrecalculationOperation.cc \
AbstractScalarSumOperation.cc \
QHEParticleWaveFunctionOperation.cc \
MainTaskOperation.cc
