SUBDIRS=QHEArchitectureOperation SpinArchitectureOperation

noinst_LIBRARIES=libArchitectureOperation.a

libArchitectureOperation_a_SOURCES=AbstractArchitectureOperation.cc \
VectorHamiltonianMultiplyOperation.cc \
MultipleVectorHamiltonianMultiplyOperation.cc \
MultipleRealScalarProductOperation.cc \
AddRealLinearCombinationOperation.cc \
MultipleComplexScalarProductOperation.cc \
AddComplexLinearCombinationOperation.cc \
MatrixMatrixMultiplyOperation.cc \
AbstractPrecalculationOperation.cc \
AbstractScalarSumOperation.cc \
MainTaskOperation.cc
