SUBDIRS=

noinst_LIBRARIES=libQHEHilbertSpace.a

libQHEHilbertSpace_a_SOURCES=Fermions.cc \
TrappedBosons.cc \
ParticleOnSphere.cc \
FermionOnSphere.cc \
BosonOnSphere.cc \
ParticleOnTorus.cc \
ParticleOnTorusWithMagneticTranslations.cc \
FermionOnTorus.cc \
FullFermionOnTorus.cc \
BosonOnTorus.cc \
ParticleOnTorusWithSpin.cc \
FermionOnTorusWithSpin.cc \
FermionOnTorusWithMagneticTranslations.cc \
BosonOnTorusWithMagneticTranslations.cc \
BosonOnTorusState.cc \
ParticleOnDisk.cc \
FermionOnDisk.cc \
FermionOnSphereLongState.cc
