SUBDIRS=

noinst_LIBRARIES=libQuantumDotHilbertSpace.a

libQuantumDotHilbertSpace_a_SOURCES=AbstractOneDOneParticle.cc \
PeriodicOneDOneParticle.cc \
PeriodicReflexionSymmetryOneDOneParticle.cc \
AbstractTwoDOneParticle.cc \
AbstractThreeDOneParticle.cc \
PeriodicThreeDOneParticle.cc \
PeriodicXReflexionSymmetryYZPeriodicThreeDOneParticle.cc \
PeriodicXYReflexionSymmetryZPeriodicThreeDOneParticle.cc \
AbstractPlanarRotationSymmetryThreeDOneParticle.cc \
PlanarRotationSymmetryZPeriodicOneParticle.cc \
Periodic1DOneParticle.cc \
Confined3DOneParticle.cc \
Periodic3DOneParticle.cc \
InPlaneReflexionSymmetricPeriodic3DOneParticle.cc \
XYReflexionSymmetricPeriodic3DOneParticle.cc \
ImpairXImpairYPeriodic3DOneParticle.cc \
ImpairXPairYPeriodic3DOneParticle.cc \
PairXImpairYPeriodic3DOneParticle.cc \
PairXPairYPeriodic3DOneParticle.cc \
VerticalPeriodicParticleInMagneticField.cc
