SUBDIRS=

noinst_LIBRARIES=libQuantumDotHilbertSpace.a

libQuantumDotHilbertSpace_a_SOURCES=Periodic1DOneParticle.cc \
Confined3DOneParticle.cc \
Periodic3DOneParticle.cc \
InPlaneReflexionSymmetricPeriodic3DOneParticle.cc \
XYReflexionSymmetricPeriodic3DOneParticle.cc \
ImpairXImpairYPeriodic3DOneParticle.cc \
ImpairXPairYPeriodic3DOneParticle.cc \
PairXImpairYPeriodic3DOneParticle.cc \
PairXPairYPeriodic3DOneParticle.cc \
VerticalPeriodicParticleInMagneticField.cc \
AbstractOneDOneParticle.cc \
PeriodicOneDOneParticle.cc \
PeriodicReflexionSymmetryOneDOneParticle.cc \
AbstractTwoDOneParticle.cc \
AbstractThreeDOneParticle.cc \
PeriodicThreeDOneParticle.cc \
PeriodicXReflexionYZPeriodicThreeDOneParticle.cc \
PeriodicXYReflexionZPeriodicThreeDOneParticle.cc \
AbstractPlanarRotationSymmetryThreeDOneParticle.cc \
PlanarRotationSymmetryZPeriodicOneParticle.cc \
AbstractThreeDTwoParticles.cc \
PeriodicThreeDTwoParticles.cc
