SUBDIRS=

noinst_LIBRARIES=libNumericalAnalysis.a

libNumericalAnalysis_a_SOURCES=AbstractNumericalInterval.cc \
FiniteRegularSubdivisionNumericalInterval.cc \
RNumericalInterval.cc \
Abstract1DRealFunction.cc \
Abstract1DComplexFunction.cc \
Abstract1DComplexTrialFunction.cc \
AntisymmetrizedComplexFunction.cc
