SUBDIRS=

noinst_LIBRARIES=libQHEArchitectureOperation.a

libQHEArchitectureOperation_a_SOURCES=QHEParticlePrecalculationOperation.cc \
QHEParticleWaveFunctionOperation.cc \
FQHEDiskQuasiholePropagatorOperation.cc \
FQHESphereJackGeneratorOperation.cc \
FQHESphereJastrowMultiplicationOperation.cc \
FQHESphereJastrowDivisionOperation.cc \
FQHESphereMonomialsTimesSlaterProjectionOperation.cc \
FQHESphereParticleEntanglementSpectrumOperation.cc \
FQHESphereJackGeneratorSumRationalPolynomialOperation.cc \
FQHESphereMultipleMonomialsTimesSlaterProjectionOperation.cc \
FQHETorusParticleEntanglementSpectrumOperation.cc \
FQHESphereMonomialsProductOperation.cc
