SUBDIRS=

noinst_LIBRARIES=libFQHEMPS.a

libFQHEMPS_a_SOURCES=AbstractFQHEMPSMatrix.cc \
FQHEMPSMatrixManager.cc \
FQHEMPSLaughlinMatrix.cc \
FQHEMPSClustered2RMatrix.cc \
FQHEMPSReadRezayi3Matrix.cc \
FQHEMPSLaughlinQuasiholeMatrix.cc \
FQHEMPSClustered2RQuasiholeSectorMatrix.cc \
FQHEMPSClustered2RQuasiholeMatrix.cc \
FQHEMPSReadRezayi3QuasiholeSectorMatrix.cc \
FQHEMPSBlockMatrix.cc \
FQHEMPSN1SuperconformalMatrix.cc \
FQHEMPSFixedQSectorMatrix.cc
