SUBDIRS=

noinst_LIBRARIES=libFQHEMonteCarlo.a

libFQHEMonteCarlo_a_SOURCES= AbstractMCSamplingFunction.cc \
LaughlinWithSpinSamplingFunction.cc \
QHESamplingFunctionManager.cc \
SimpleMonteCarloOnSphereAlgorithm.cc \
AbstractObservable.cc \
AbstractBlockObservable.cc \
ParticleOnSphereCollection.cc \
AbstractParticleCollection.cc \
SphereBilayerCoulombEnergy.cc \
LaughlinSamplingFunction.cc \
HalperinSamplingFunction.cc \
SphereCoulombEnergy.cc \
TrivialSamplingFunction.cc \
SphereGeneralEnergy.cc \
SphereWithSpinGeneralEnergy.cc \
SphereTwoBodyCorrelator.cc \
SphereBilayerTwoBodyCorrelator.cc \
BlockMonteCarloOnSphereAlgorithm.cc \
AbstractMCBlockSamplingFunction.cc \
AbstractMCBlockSamplingFunctionOnSphere.cc \
MRBlockSamplingFunction.cc \
SphereBlockCoulombEnergy.cc \
ParticleOnSphereCollectionSouthPole.cc \
ParticleOnSphereCollectionGauged.cc \
AbstractParticleCollectionOnSphere.cc \
AbstractMCSamplingFunctionOnSphere.cc