SUBDIRS=

noinst_LIBRARIES=libQHEWaveFunction.a

libQHEWaveFunction_a_SOURCES=LaughlinOnSphereWaveFunction.cc \
PfaffianOnSphereWaveFunction.cc \
PfaffianOnSphereTwoQuasiholeWaveFunction.cc \
JainCFFilledLevelOnSphereWaveFunction.cc \
JainCFOnSphereOrbitals.cc \
MooreReadOnSphereWaveFunction.cc \
LaughlinOnDiskWaveFunction.cc \
PfaffianOnDiskWaveFunction.cc \
MooreReadOnDiskWaveFunction.cc \
JainCFOnSphereWaveFunction.cc \
LandauSpectrumOnSphere.cc \
UnprojectedJainCFOnSphereWaveFunction.cc \
QHEWaveFunctionManager.cc \
ExactWaveFunction.cc \
DerivativeProduct.cc \
DerivativeProductFactor.cc \
SumDerivativeProduct.cc \
AbstractFQHEWaveFunctionOneOverR.cc \
LaughlinOnDiskWaveFunctionOneOverR.cc \
HalperinOnDiskWaveFunctionOneOverR.cc \
HalperinOnSphereWaveFunction.cc \
SU4HalperinOnSphereWaveFunction.cc \
PairedCFOnSphereWaveFunction.cc \
PairedCFOnSphereWithSpinWaveFunction.cc \
WaveFunctionOverlapOptimizer.cc \
ExtendedHalperinWavefunction.cc \
TwoThirdSingletState.cc \
HundRuleCFStates.cc \
HundRuleBilayerSinglet.cc \
SlaterSuperposition.cc \
SlaterComponent.cc \
SU3HalperinOnSphereWaveFunction.cc \
AdvancedMooreReadOnSphereWaveFunction.cc \
ReadRezayiOnSphereBlock.cc \
ExplicitMooreReadOnSphereWaveFunction.cc \
PairedCFOnSphere2QHWaveFunction.cc \
FQHESphereSymmetrizedSUKToU1WaveFunction.cc \
FQHESU2HalperinPermanentOnSphereWaveFunction.cc \
FQHESU3HalperinPermanentOnSphereWaveFunction.cc 