SUBDIRS=

noinst_LIBRARIES=libFTITightBinding.a

libFTITightBinding_a_SOURCES=AbstractTightBindingModel.cc \
Abstract1DTightBindingModel.cc \
Abstract2DTightBindingModel.cc \
Abstract3DTightBindingModel.cc \
GenericTightBindingModel.cc \
TightBindingModelRubyLattice.cc \
TightBindingModelKagomeLattice.cc \
TightBindingModelCheckerboardLattice.cc
