SUBDIRS=

noinst_LIBRARIES=libFTITightBinding.a

libFTITightBinding_a_SOURCES=AbstractTightBindingModel.cc \
Abstract1DTightBindingModel.cc \
Abstract2DTightBindingModel.cc \
Abstract3DTightBindingModel.cc \
GenericTightBindingModel.cc \
TightBindingModelRubyLattice.cc \
TightBindingModelKagomeLattice.cc \
TightBindingModelCheckerboardLattice.cc \
TightBindingModelChern2DiceLattice.cc \
TightBindingModelChern2TriangularLattice.cc \
TightBindingModelPyrochloreSlabLattice.cc \
TightBindingModelHaldaneHoneycombLattice.cc \
TightBindingModelChern3TwoOrbitalTriangularLattice.cc 
