SUBDIRS=

noinst_LIBRARIES=libQHEWaveFunction.a

libQHEWaveFunction_a_SOURCES=LaughlinOnSphereWaveFunction.cc \
PfaffianOnSphereWaveFunction.cc \
JainCFFilledLevelOnSphereWaveFunction.cc \
MooreReadOnSphereWaveFunction.cc \
LaughlinOnDiskWaveFunction.cc \
PfaffianOnDiskWaveFunction.cc \
MooreReadOnDiskWaveFunction.cc \
JainCFOnSphereWaveFunction.cc \
LandauSpectrumOnSphere.cc
